# Object-Oriented-Programming

Assignments/A1/: CMakeLists.txt
Assignments/A1/a1-neon1024-1/: main.c  main.h
Assignments/A23/a23-neon1024/: CMakeLists.txt  main.c  main.h
Assignments/A23/a23-neon1024/UI/: console.c  console.h
Assignments/A23/a23-neon1024/domain/: CustomErrors.c  CustomErrors.h  Estate.c  Estate.h
Assignments/A23/a23-neon1024/repository/: estate_repository.c  estate_repository.h
Assignments/A23/a23-neon1024/service/: estate_service.c  estate_service.h
